erDiagram
  TEMPLATES ||--o{ TEMPLATE_PAGES : has
  TEMPLATE_PAGES ||--o{ TEMPLATE_FIELDS : has
  TEMPLATE_PAGES ||--o{ IGNORE_REGIONS : has
  TEMPLATE_REQUESTS ||--o{ TEMPLATE_REQUEST_PAGES : has
  TEMPLATE_REQUEST_PAGES ||--o{ REQUESTED_FIELDS : has
  DOCUMENTS ||--o{ DOCUMENT_PAGES : has
  DOCUMENT_PAGES ||--o{ EXTRACTION_RESULTS : has
  DOCUMENT_PAGES ||--o{ DETECTION_LOGS : has
  TEMPLATE_PAGES ||--o{ DETECTION_LOGS : candidate
